# synth-neuralnet

./: .gitignore  README.md  pyproject.toml
configs/: dataset_clean_50k.yaml  dataset_clean_mixed_10k.yaml  model_student.yaml  model_teacher.yaml  params_schema.yaml  serial_protocol.yaml  train_baseline.yaml
scripts/: __init__.py  benchmark_esp32_render.py  export_onnx.py  generate_clean_dataset.py  inspect_dataset.py  train_baseline.py
src/synth_match.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/synthmatch/: __init__.py
src/synthmatch/data/: __init__.py  audio_io.py  augment.py  dataset_manifest.py  features.py  torch_dataset.py
src/synthmatch/deployment/: __init__.py  export_onnx.py  pi_inference.py  quantize.py
src/synthmatch/evaluation/: __init__.py  audio_metrics.py  random_search_baseline.py  render_comparison.py
src/synthmatch/models/: __init__.py  heads.py  student_cnn.py  teacher_model.py
src/synthmatch/synth/: __init__.py  audio_capture.py  param_sampler.py  param_schema.py  renderer_interface.py  serial_protocol.py  synth_controller.py
src/synthmatch/training/: __init__.py  checkpoints.py  losses.py  train_loop.py
tests/: test_audio_io.py  test_duration_schedule.py  test_manifest.py  test_param_sampler.py  test_param_schema.py  test_serial_protocol.py
